syntax = "proto3";

package api.todo;

import "todo.types.proto";

service StatusService {
    rpc AddStatus (AddStatusReq) returns (TaskStatusRes) {
    }

    rpc UpdateStatus (StatusList) returns (TaskStatusRes) {
    }

    rpc DeleteStatus (StatusReq) returns (TaskStatusRes) {
    }

    rpc GetStatus (StatusReq) returns (TaskStatus) {
    }

    rpc GetStatuses (StatusesReq) returns (StatusList) {
    }

    rpc GetStatusesWithTasks (StatusesReq) returns (StatusList) {
    }
}

message AddStatusReq {
    string board = 1;
    string name = 2;
    int32 index = 3;
    bool root = 4;
}

message StatusReq {
    string id = 1;
}

message StatusesReq {
    string board = 1;
}

message StatusList {
    repeated TaskStatus statuses = 1;
}
